<resources>
    <string name="app_name">Foodler</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="facebook">Facebook</string>
    <string name="continue_with">Continue With</string>
    <string name="google">Google</string>
    <string name="or">Or</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="deliver_favorite_food">Deliver Favorite Food</string>
    <string name="waves_of_food">Waves Of Food</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="designed_by">Designed by \nMuhammad Nayeem</string>
    <string name="login">Login</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="name">Name</string>
    <string name="email_or_phone">Email or Phone Number</string>
    <string name="sign_up_with">Sign Up With</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="to_provide_you">To Provide you with the best dining experience, we need your permission to access your device\'s location, by enabling location services. we can offer personalized restaurant recomendations, accurate delivery estimates, and ensure a seamless food delivery experience.</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular">Popular</string>
    <string name="view_menu">View Menu</string>
    <string name="proceed">Proceed</string>
    <string name="food_name">Food Name</string>
    <string name="notifications">Notifications</string>
</resources>