<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/login_ivLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waves_of_food"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/login_ivLogo"
        app:layout_constraintStart_toStartOf="@id/login_ivLogo"
        app:layout_constraintTop_toBottomOf="@id/login_ivLogo" />

    <TextView
        android:id="@+id/login_tvDeliver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/deliver_favorite_food"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/login_tvTitle"
        app:layout_constraintStart_toStartOf="@id/login_tvTitle"
        app:layout_constraintTop_toBottomOf="@id/login_tvTitle" />

    <TextView
        android:id="@+id/login_tvLoginAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/login_to_your_account"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/login_tvDeliver"
        app:layout_constraintStart_toStartOf="@id/login_tvDeliver"
        app:layout_constraintTop_toBottomOf="@id/login_tvDeliver" />


    <EditText
        android:id="@+id/login_etEmail"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/et_shape"
        android:drawableStart="@drawable/mail"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="@id/login_tvLoginAccount"
        app:layout_constraintStart_toStartOf="@id/login_tvLoginAccount"
        app:layout_constraintTop_toBottomOf="@id/login_tvLoginAccount" />

    <EditText
        android:id="@+id/login_etPassword"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/et_shape"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="18dp"
        android:elevation="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="@id/login_etEmail"
        app:layout_constraintStart_toStartOf="@id/login_etEmail"
        app:layout_constraintTop_toBottomOf="@id/login_etEmail" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/or"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/login_etPassword"
        app:layout_constraintStart_toStartOf="@id/login_etPassword"
        app:layout_constraintTop_toBottomOf="@id/login_etPassword" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/continue_with"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/textView"
        app:layout_constraintStart_toStartOf="@id/textView"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btnFacebook"
        android:layout_width="157dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_white"
        android:drawableStart="@drawable/facebook"
        android:paddingStart="15dp"
        android:text="@string/facebook"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/login_btnGoogle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btnGoogle"
        android:layout_width="157dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_white"
        android:drawableStart="@drawable/google"
        android:paddingStart="15dp"
        android:text="@string/google"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_btnFacebook"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btnLogin"
        android:layout_width="157dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_gradient_green"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_btnGoogle" />

    <TextView
        android:id="@+id/btnDontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/don_t_have_account"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="@id/login_btnLogin"
        app:layout_constraintStart_toStartOf="@id/login_btnLogin"
        app:layout_constraintTop_toBottomOf="@id/login_btnLogin" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/designed_by"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>