<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignActivity">


    <ImageView
        android:id="@+id/sign_ivLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sign_tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waves_of_food"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/sign_ivLogo"
        app:layout_constraintStart_toStartOf="@id/sign_ivLogo"
        app:layout_constraintTop_toBottomOf="@id/sign_ivLogo" />

    <TextView
        android:id="@+id/sign_tvDeliver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/deliver_favorite_food"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/sign_tvTitle"
        app:layout_constraintStart_toStartOf="@id/sign_tvTitle"
        app:layout_constraintTop_toBottomOf="@id/sign_tvTitle" />

    <TextView
        android:id="@+id/sign_tvLoginAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up_here"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/sign_tvDeliver"
        app:layout_constraintStart_toStartOf="@id/sign_tvDeliver"
        app:layout_constraintTop_toBottomOf="@id/sign_tvDeliver" />


    <EditText
        android:id="@+id/sign_etName"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/et_shape"
        android:drawableStart="@drawable/user"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="@id/sign_tvLoginAccount"
        app:layout_constraintStart_toStartOf="@id/sign_tvLoginAccount"
        app:layout_constraintTop_toBottomOf="@id/sign_tvLoginAccount" />


    <EditText
        android:id="@+id/sign_etEmail"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/et_shape"
        android:drawableStart="@drawable/mail"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:hint="@string/email_or_phone"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="@id/sign_etName"
        app:layout_constraintStart_toStartOf="@id/sign_etName"
        app:layout_constraintTop_toBottomOf="@id/sign_etName" />

    <EditText
        android:id="@+id/sign_etPassword"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/et_shape"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="18dp"
        android:elevation="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="@id/sign_etEmail"
        app:layout_constraintStart_toStartOf="@id/sign_etEmail"
        app:layout_constraintTop_toBottomOf="@id/sign_etEmail" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/or"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/sign_etPassword"
        app:layout_constraintStart_toStartOf="@id/sign_etPassword"
        app:layout_constraintTop_toBottomOf="@id/sign_etPassword" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/sign_up_with"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/textView"
        app:layout_constraintStart_toStartOf="@id/textView"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_btnFacebook"
        android:layout_width="157dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_white"
        android:drawableStart="@drawable/facebook"
        android:paddingStart="15dp"
        android:text="@string/facebook"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/sign_btnGoogle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_btnGoogle"
        android:layout_width="157dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_white"
        android:drawableStart="@drawable/google"
        android:paddingStart="15dp"
        android:text="@string/google"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sign_btnFacebook"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_btnLogin"
        android:layout_width="157dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_gradient_green"
        android:text="Create Account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_btnGoogle" />

    <TextView
        android:id="@+id/btnHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/already_have_account"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/sign_btnLogin"
        app:layout_constraintStart_toStartOf="@id/sign_btnLogin"
        app:layout_constraintTop_toBottomOf="@id/sign_btnLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>